[gd_scene load_steps=17 format=3 uid="uid://ms43gnmmu3g3"]

[ext_resource type="FontFile" uid="uid://dskmx2extevrw" path="res://data/fonts/times.ttf" id="1_52rl6"]
[ext_resource type="Script" uid="uid://lj43fl6ocrf3" path="res://data/scenes_and_scripts/phoenix/login_screen.gd" id="1_vynka"]
[ext_resource type="Script" uid="uid://fjildfqdib8h" path="res://data/scenes_and_scripts/multiplayertesting/label_pressed.gd" id="3_qf86c"]
[ext_resource type="Texture2D" uid="uid://crknm7gdg7jon" path="res://data/images/fog.png" id="4_aiv7l"]
[ext_resource type="FontFile" uid="uid://dehm6x83duy2e" path="res://data/fonts/space-ranger/spaceranger.ttf" id="4_w6vpo"]
[ext_resource type="Script" uid="uid://bp4dtiex0f3ss" path="res://data/scenes_and_scripts/phoenix/splash_screen.gd" id="4_wk1ki"]
[ext_resource type="Texture2D" uid="uid://cfawov84ked10" path="res://data/images/Brain1.png" id="5_wk1ki"]
[ext_resource type="AudioStream" uid="uid://xuko8gsg2vou" path="res://data/music/login_screen.mp3" id="8_n3bdt"]
[ext_resource type="AudioStream" uid="uid://n35hhg7ig1bd" path="res://data/sounds/login_button.mp3" id="9_nr2tq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nr2tq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2reso"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kx71p"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ki628"]

[sub_resource type="Gradient" id="Gradient_aiv7l"]
offsets = PackedFloat32Array(0, 0.109677, 1)
colors = PackedColorArray(0.152941, 0, 0.921569, 0, 0.152941, 0, 0.921569, 1, 0.938295, 0.817838, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_w6vpo"]
gradient = SubResource("Gradient_aiv7l")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_vynka"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(1000, 300, 1)
angle_min = -720.0
angle_max = 720.0
gravity = Vector3(0, -98, 0)
scale_min = 0.5
scale_max = 1.5
color = Color(1, 1, 1, 0.054902)
color_ramp = SubResource("GradientTexture1D_w6vpo")

[node name="LoginScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vynka")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CanvasModulate" type="CanvasModulate" parent="CanvasLayer"]
unique_name_in_owner = true

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="FirstScreenControl" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="RichTextLabel" parent="CanvasLayer/FirstScreenControl"]
clip_contents = false
layout_mode = 1
anchors_preset = -1
anchor_top = 0.059
anchor_right = 1.0
anchor_bottom = 0.067
offset_top = 620.0
offset_bottom = 962.0
theme_override_fonts/normal_font = ExtResource("1_52rl6")
theme_override_font_sizes/normal_font_size = 187
bbcode_enabled = true
text = "[center][wave amp=50.0 freq=5.0 connected=1][pulse freq=1.0 color=#ffffff40 ease=-2.0]wordwar.[/pulse][/wave][/center]"
scroll_active = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="EmailBox" type="LineEdit" parent="CanvasLayer/FirstScreenControl"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 248.0
offset_top = 1174.0
offset_right = 1048.0
offset_bottom = 1386.0
theme_override_colors/caret_color = Color(1, 1, 1, 1)
theme_override_colors/font_placeholder_color = Color(0.392163, 0.372995, 0.328265, 0.321569)
theme_override_constants/caret_width = 2
theme_override_fonts/font = ExtResource("1_52rl6")
theme_override_font_sizes/font_size = 100
theme_override_styles/focus = SubResource("StyleBoxEmpty_nr2tq")
theme_override_styles/normal = SubResource("StyleBoxEmpty_2reso")
placeholder_text = "email"
max_length = 100
virtual_keyboard_type = 5
caret_blink = true
caret_blink_interval = 0.5

[node name="PasswordBox" type="LineEdit" parent="CanvasLayer/FirstScreenControl"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 251.0
offset_top = 1370.0
offset_right = 1051.0
offset_bottom = 1582.0
theme_override_colors/font_placeholder_color = Color(0.392157, 0.372549, 0.329412, 0.321569)
theme_override_constants/caret_width = 2
theme_override_fonts/font = ExtResource("1_52rl6")
theme_override_font_sizes/font_size = 100
theme_override_styles/focus = SubResource("StyleBoxEmpty_kx71p")
theme_override_styles/normal = SubResource("StyleBoxEmpty_ki628")
placeholder_text = "password"
max_length = 100
virtual_keyboard_type = 6
caret_blink = true
caret_blink_interval = 0.5
secret = true

[node name="Login" type="Label" parent="CanvasLayer/FirstScreenControl"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 420.0
offset_top = 1769.0
offset_right = 897.0
offset_bottom = 1899.0
mouse_filter = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_52rl6")
theme_override_font_sizes/font_size = 116
text = "log in."
horizontal_alignment = 1
script = ExtResource("3_qf86c")

[node name="CreateAccount" type="Label" parent="CanvasLayer/FirstScreenControl"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 305.0
offset_top = 1945.0
offset_right = 1001.0
offset_bottom = 2075.0
mouse_filter = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_52rl6")
theme_override_font_sizes/font_size = 116
text = "create account."
horizontal_alignment = 1
script = ExtResource("3_qf86c")

[node name="QuickLoginA" type="Button" parent="CanvasLayer/FirstScreenControl"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 118.0
offset_top = 2587.0
offset_right = 540.0
offset_bottom = 2770.0
text = "QuickLoginA"

[node name="QuickLoginB" type="Button" parent="CanvasLayer/FirstScreenControl"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 767.0
offset_top = 2591.0
offset_right = 1189.0
offset_bottom = 2774.0
text = "QuickLoginB"

[node name="QuickLoginC" type="Button" parent="CanvasLayer/FirstScreenControl"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 90.0
offset_top = 116.0
offset_right = 512.0
offset_bottom = 299.0
text = "QuickLoginB"

[node name="QuickLoginD" type="Button" parent="CanvasLayer/FirstScreenControl"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 815.0
offset_top = 98.0
offset_right = 1237.0
offset_bottom = 281.0
text = "QuickLoginB"

[node name="SplashScreen" type="ColorRect" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
script = ExtResource("4_wk1ki")

[node name="Label3" type="Label" parent="CanvasLayer/SplashScreen"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 206.0
offset_top = 2036.0
offset_right = 1097.0
offset_bottom = 2264.0
theme_override_colors/font_color = Color(0.438889, 0.299364, 2.40654e-07, 1)
theme_override_fonts/font = ExtResource("4_w6vpo")
theme_override_font_sizes/font_size = 106
text = "headphones
 recommended"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="CanvasLayer/SplashScreen"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 233.0
offset_top = 383.0
offset_right = 1124.0
offset_bottom = 674.0
theme_override_colors/font_color = Color(0.438889, 0.299364, 2.40654e-07, 1)
theme_override_fonts/font = ExtResource("4_w6vpo")
theme_override_font_sizes/font_size = 106
text = "a 
CJ Enterprises
Production"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/SplashScreen"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 336.0
offset_top = 1214.0
offset_right = 978.0
offset_bottom = 1801.0
mouse_filter = 0
texture = ExtResource("5_wk1ki")
expand_mode = 1
stretch_mode = 4

[node name="Label3" type="Label" parent="CanvasLayer/SplashScreen/TextureRect"]
layout_mode = 0
offset_left = -115.0
offset_top = -176.0
offset_right = 776.0
offset_bottom = -81.0
theme_override_colors/font_color = Color(0.438889, 0.299364, 2.40654e-07, 1)
theme_override_fonts/font = ExtResource("4_w6vpo")
theme_override_font_sizes/font_size = 106
text = "Protected by:"
horizontal_alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/SplashScreen/TextureRect"]
layout_mode = 0
offset_left = -44.0
offset_top = 99.0
offset_right = 660.0
offset_bottom = 390.0
mouse_filter = 0
theme_override_colors/font_color = Color(0.438889, 0.299364, 2.40654e-07, 1)
theme_override_fonts/font = ExtResource("4_w6vpo")
theme_override_font_sizes/font_size = 106
text = "Cortex
Stochastic
Anti-cheat"
horizontal_alignment = 1

[node name="GPUParticles2D" type="GPUParticles2D" parent="CanvasLayer"]
unique_name_in_owner = true
position = Vector2(668, 2732)
amount = 100
texture = ExtResource("4_aiv7l")
lifetime = 10.0
fixed_fps = 60
process_material = SubResource("ParticleProcessMaterial_vynka")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_n3bdt")
volume_db = 8.056
autoplay = true

[node name="login_btn" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("9_nr2tq")
volume_db = 8.056
pitch_scale = 1.5

[node name="create_account_btn" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("9_nr2tq")
volume_db = 8.056

[connection signal="pressed" from="CanvasLayer/FirstScreenControl/Login" to="." method="_on_login_pressed"]
[connection signal="pressed" from="CanvasLayer/FirstScreenControl/CreateAccount" to="." method="_on_create_account_pressed"]
[connection signal="pressed" from="CanvasLayer/FirstScreenControl/QuickLoginA" to="." method="_on_quick_login_a_pressed"]
[connection signal="pressed" from="CanvasLayer/FirstScreenControl/QuickLoginB" to="." method="_on_quick_login_b_pressed"]
[connection signal="pressed" from="CanvasLayer/FirstScreenControl/QuickLoginC" to="." method="_on_quick_login_c_pressed"]
[connection signal="pressed" from="CanvasLayer/FirstScreenControl/QuickLoginD" to="." method="_on_quick_login_d_pressed"]
